--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "push-basic": "rm -rf public/*; cp -r src-basic/public/* public",
     "push-full": "rm -rf public/*; cp -r src-full/public/* public",
     "bundle": "browserify build/app.js -o public/app.js",
+    "bundle-server": "browserify build/server.js --bare -o server.js",
     "create-basic": "npm run build-basic; npm run sm; npm run push-basic; npm run bundle",
-    "create-full": "npm run build-full; npm run sm; npm run push-full; cp -r src-full/app/data build/app; npm run bundle"
+    "create-full": "npm run build-full; npm run sm; npm run push-full; cp -r src-full/app/data build/app; npm run bundle; npm run bundle-server"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,13 @@
   ],
   "author": "Pete Gaulton",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "ejs": "^2.5.6",
+    "express": "^4.14.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
+  },
   "devDependencies": {
     "@peteyg/patternlab-react": "^1.0.17",
     "babel-cli": "^6.22.2",
@@ -32,9 +39,6 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "browserify": "^14.0.0",
-    "faker": "^4.1.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "faker": "^4.1.0"
   }
 }
