--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "patternlab-react-demo",
   "version": "1.0.4",
   "description": "Demo site using patternlab-react",
-  "main": "build/app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-basic": "rm -rf build; babel src-basic --presets=babel-preset-es2015,react --plugins=transform-object-rest-spread --out-dir=build",
